[project]
name = "expense-tracker"
version = "0.1.0"
description = "A command-line expense tracker. Refactored from a script into a proper Python package."
readme = "README.md"
authors = [
    { name = "Avradip Mazumdar", email = "rontymazumdar@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
expense-tracker = "expense_tracker:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
